# PNIDGrab

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_appimage.sh  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: appimage.yml
src/: gui.rs  main.rs  platform.rs
src/platform/: linux.rs  macos.rs  windows.rs
