[package]
name = "pnidgrab"
version = "2.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
cfg-if = "1.0.3"
libc = "0.2.175"
reqwest = { version = "0.12.23", features = ["blocking"] }
roxmltree = "0.20.0"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.10"
mach2 = "0.5.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9" 
features = [
  "winnt",
  "processthreadsapi",
  "memoryapi",
  "psapi",
  "winerror",
  "tlhelp32",
  "handleapi",
  "errhandlingapi",
  "libloaderapi"
]
